[package]
name = "tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "XOR tools: deterministic key generation + maximum-reliability streaming XOR"
authors = ["Mark"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
argon2 = "0.5"
chacha20 = "0.10"
cipher = "0.5"
sha2 = "0.10"
libc = "0.2"
